--- a/products.html
+++ b/products.html
@@ -4,16 +4,16 @@
    <html xmlns="http://www.w3.org/1999/xhtml">
    <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Home - BMJ Racers</title>
+	<title>BMX Bikes for Sale</title>
 	<meta name="description" content="The finest BMX Racers available in Albuquerque and New Mexico."/><meta name="keywords" content="BMX, bikes, safe riding" />
-   <title>Welcome to BMJ Racers, home of Albuquerque's finest selection of BMX Bikes</title>
+   <title>BMJ Racers provide exceptional BMX bike service</title>
    <link  href="esp.css" rel="stylesheet" type="text/css" />
 
    <link href="print.css" rel="stylesheet" type="text/css" media="print" />
    </head>
    <body>
     <div id="wrapper">
-  	<h1><img src="images/tr.gif" alt="exceptional BMX rides in New Mexico" width="548" height="180" id="logo"/></h1>
+  	<h1>Got BMX bikes? <br />Need Parts?! </h1>
 	
 	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
 	<a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
@@ -31,7 +31,7 @@
 BMJ RACERS is the modern place <br /> to achieve all your BMX dreams. <br /><br /></p>
 <h4><img src="images/tr.gif" alt="Our BMX bikes are crafted with exceptional care." width="596" height="288" id="art"/></h1>
     
-    <p align="center">Thanks for your visit!</p>  
+    <p align="center">We look forward to seeing you soon!</p>  
     
   
     </div>
