update index and css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </head>
    <body>
     <div id="wrapper">
-  	<h1><img src="images/tr.gif" alt="exceptional BMX rides in New Mexico" width="548" height="180" id="logo"/></h1>
+  	<h1>BMX Racers</h1>
 	
 	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
 	<a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
