--- a/products.html
+++ b/products.html
@@ -25,10 +25,10 @@
  
 </h2>   
     <div>
-  <h3 align="center">Welcome! </h3>
+  <h3 align="center">Achieve your BMX potential! </h3>
     <p align="center"> 
       
-BMJ RACERS is the modern place <br /> to achieve all your BMX dreams. <br /><br /></p>
+<br /><br /></p>
 <h4><img src="images/tr.gif" alt="Our BMX bikes are crafted with exceptional care." width="596" height="288" id="art"/></h1>
     
     <p align="center">We look forward to seeing you soon!</p>  
