filled in products and safety pages

--- a/products.html
+++ b/products.html
@@ -21,17 +21,36 @@
 	<a href="products.html">Products</a>&nbsp;|&nbsp;
 	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
 	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
-    	<a href="contact.html">Contact Us</a>&nbsp;
- 
-</h2>   
+    	<a href="contact.html">Contact Us</a>&nbsp; </h2>   
     <div>
   <h3 align="center">Achieve your BMX potential! </h3>
-    <p align="center"> 
-      
+    <p align="center">
+     <h3> We have new bikes!</h3>
+      <ul>
+       <li>BMX SUPREME</li>
+       <li>BMX SUPERIOR</li>
+       <li>BMX AMAZING THREE</li>
+      </ul>
+<br /></p>
+     <p align="center">
+     <h3> We have new stickers!</h3>
+      <ul>
+       <li>BMX SUPREME (two inch, square)</li>
+       <li>BMX SUPERIOR (three inch size, scaleable)</li>
+       <li>BMX AMAZING 3 (in six inch size)</li>
+      </ul>
+<br /></p>
+          <p align="center">
+     <h3> PARTS TOO!!</h3>
+      <ul>
+       <li>BMX SUPREME ADVENTURE WHEELS (36", square)</li>
+       <li>BMX SUPERIOR WHEELS (24", with scaleable)</li>
+       <li>BMX AMAZING 3 (in six inch size)</li>
+      </ul>
 <br /><br /></p>
 
 
-    <p align="center">We look forward to seeing you soon!</p>  
+    <p align="center">Come to our shop and check us out!</p>  
     
   
     </div>
