More .css changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 BMJ RACERS is the modern place <br /> to achieve all your BMX dreams. <br /><br /></p>
 <h4><img src="images/tr.gif" alt="Our BMX bikes are crafted with exceptional care." width="596" height="288" id="art"/></h1>
     
-    <p align="center">Thanks for your visit!</p>  
+    <p class="goodbye">Thanks for your visit!</p>  
     
   
     </div>
