changes (grammatical, colr) to location, team, service pages.

--- a/locations.html
+++ b/locations.html
@@ -25,13 +25,13 @@
  
 </h2>   
     <div>
-  <h3 align="center">Locations.</h3>
+  <h3 align="center">Locations</h3>
     <a href="https://www.usabmx.com/tracks/1046"><p align="center">Duke City Bike Park (behind Isotopes Park)</p></a>
     <a href="https://www.facebook.com/pages/North-Valley-Bike-Park-Bernalillo-County/132435156863826"><p align="center">North Valley Bike Park (behind Raymond G.Sanchez Community Center)</p></a>
     <a href="http://www.visitalbuquerque.org/listings/Skate-Parks---City-of-Albuquerque/4003/"><p align="center">ABQ Skate Parks (Los Altos, Coronado, Tower, Alamosa, North Domingo Baca, NW Modular)</p></a>
 
 
-<h4>Always ride with respect to others property.</h4>
+<h4 style="color: white">Always ride with respect to others property.</h4>
     
     <p align="center">Get out and Ride!</p>  
     
