--- a/team.html
+++ b/team.html
@@ -29,9 +29,9 @@
     <p align="center">Amazing locally grown racers, taking over the southwest.</p>
 
 <h4 style="color: white">BMJ Sponsors are the best and brightest companies in the Southwest!</h4>
-    <p align="center">Blake's Lotaburger</p>
-    <p align="center">Deep Dive Coders</p>
-    <p align="center">CNM Stimulus</p>
+    <a href="http://www.lotaburger.com"</a><p align="center">Blake's Lotaburger</p>
+    <a href="http://www.deepdivecoders.com"</a><p align="center">Deep Dive Coders</p>
+    <a href="http://www.cnm.edu"</a><p align="center">CNM STEMulus</p>
     <p align="center" style="color: white">Thanks for supporting our team!</p>  
     
   
