Change contact us page text

--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,14 @@
 	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
 	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
     	<a href="contact.html">Contact Us</a>&nbsp;
- 
+ ccc
 </h2>   
     <div>
   
-    <p align="center"><h3>Welcome!</h3><br />
+    <p align="center"><h3>Come see us in our downtown location at:<br />
+    312 Central Ave SE, Albuquerque, NM 87102</h3><br />
       
-<h3>BMJ RACERS is the modern place <br />to achieve all your BMX dreams.</h3> <br /><br /></p>
+<h3><a href="www.bmjracers.com">Contact us online at:</a></h3></p>
 
     
     <p align="center">Thanks for your visit!</p>  
