changed h1 margin-top

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
    <link href="print.css" rel="stylesheet" type="text/css" media="print" />
    </head>
    <body>
+    <h1>CONTACTS</h1>
     <div id="wrapper">
   	
 	
@@ -22,7 +23,7 @@
 	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
 	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
     	<a href="contact.html">Contact Us</a>&nbsp;
- ccc
+ 
 </h2>   
     <div>
   
