centered and changed text color on index page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 BMJ RACERS is the modern place <br /> to achieve all your BMX dreams. <br /><br /></p>
 <h3>Our BMX bikes are crafted with exceptional care.</h3>
     
-    <p class="goodbye">Thanks for your visit!</p>  
+    <p align="center" style="color: #FFFFFF">Thanks for your visit!</p>  S
     
   
     </div>
