add responsiveness to safety page

--- a/safety.html
+++ b/safety.html
@@ -1,18 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-   <html xmlns="http://www.w3.org/1999/xhtml">
-   <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Safety Tips</title>
-	<meta name="description" content="The finest BMX Racers ride safe for life in Albuquerque and New Mexico."/><meta name="keywords" content="BMX, bikes, safe riding" />
+<!DOCTYPE html>
+   <html>
+    <head>
+	<meta charset=UTF-8" />
+	<title>Safety Tips - Responsive</title>
    <title>Ride for Life</title>
-   <link  href="esp.css" rel="stylesheet" type="text/css" />
-
-   <link href="print.css" rel="stylesheet" type="text/css" media="print" />
-   </head>
-   <body>
-    <div id="wrapper">
+   <link href="esp.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+     <div id="wrapper">
   	<h1>Safe Riding! <br />with Maximum Speed...</h1>
 	
 	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
@@ -22,29 +17,29 @@
 	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
 	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
     	<a href="contact.html">Contact Us</a>&nbsp; </h2>   
-    <div>
-     <p><strong>Spills are always possible</strong> and can happen during a race or even during practices. Although injuries can happen to any rider, observing safe riding habits can ensure that injuries are kept to a minimum; rides are kept to a maximum. <br />
-     <br />Recommended Safety Gear:</p>
-     <ul>
-      <li>Racing Pants</li>
-      <li>Gloves</li>
-      <li>Helmets</li>
-      <li>Shoes</li>
-      <li>Racing Jersey</li>
-     </ul>
-     <p>Race Worthy Bikes</p>
-     <ul>
-      <li> Frame and forks must not be cracked, broken or distorted. <br /> Check to be sure they are the correct size and in good condition.</li>
-      <li>Wheels must be no larger than 53.3mm</li>
-      <li>Tires should be properly inflated, with no splits or separations.</li>
-      <li>Chains and bearing must be properly greased and tensioned.</li>
-      <li>Brakes must operate effectively and lock the rear wheel.</li>
-      <li>Pedals have effective grip</li>
-      <li> Handlebars no wider than allowable width of 735mm</li>
-     </ul>
+       <div> 
+	   <p><strong>Spills are always possible</strong> and can happen during a race or even during practices. Although injuries can happen to any rider, observing safe riding habits can ensure that injuries are kept to a minimum; rides are kept to a maximum. <br />
+	  <br />Recommended Safety Gear:</p>
+	      <ul>
+		<li>Racing Pants</li>
+		<li>Gloves</li>
+		<li>Helmets</li>
+		<li>Shoes</li>
+		<li>Racing Jersey</li>
+	      </ul>
+	   <p>Race Worthy Bikes</p>
+	      <ul>
+		<li> Frame and forks must not be cracked, broken or distorted. <br /> Check to be sure they are the correct size and in good condition.</li>
+		<li>Wheels must be no larger than 53.3mm</li>
+		<li>Tires should be properly inflated, with no splits or separations.</li>
+		<li>Chains and bearing must be properly greased and tensioned.</li>
+		<li>Brakes must operate effectively and lock the rear wheel.</li>
+		<li>Pedals have effective grip</li>
+		<li> Handlebars no wider than allowable width of 735mm</li>
+	      </ul>
      
-    </div>
-<div class="footer">Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. <br /></div>
+       </div>
+<footer>Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. <br /></div>
     </div>
     </body>
     </html>  
