refactored nav tag in html on index page. Refactored footer in css.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
    </head>
   
    <body>
-  	<header>BMX Racers</header>
+  	<header>
+	 <h1>BMX Racers</h1>
+	</header>
 	
-	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
-	<a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
-	<a href="service.html">Service & Repairs</a>&nbsp;|&nbsp;
-	<a href="products.html">Products</a>&nbsp;|&nbsp;
-	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
-	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
-    	<a href="contact.html">Contact Us</a>&nbsp;
+	 <nav>
+	  <h2>
+	   <a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
+	   <a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
+	   <a href="service.html">Service & Repairs</a>&nbsp;|&nbsp;
+	   <a href="products.html">Products</a>&nbsp;|&nbsp;
+	   <a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
+	   <a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
+	   <a href="contact.html">Contact Us</a>&nbsp;
+	  </h2>
+	 </nav>
  
-</h2>   
+
     <div>
   <h3 align="center">Welcome! </h3>
     <p align="center"> 
