update tags for products and safety page

--- a/products.html
+++ b/products.html
@@ -1,16 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-   <html xmlns="http://www.w3.org/1999/xhtml">
-   <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>BMX Bikes for Sale</title>
-	<meta name="description" content="The finest BMX Racers available in Albuquerque and New Mexico."/><meta name="keywords" content="BMX, bikes, safe riding" />
-   <title>BMJ Racers provide exceptional BMX bike service</title>
-   <link  href="esp.css" rel="stylesheet" type="text/css" />
-
-   <link href="print.css" rel="stylesheet" type="text/css" media="print" />
-   </head>
+<!DOCTYPE html>
+   <html>
+    <head>
+	<meta charset=UTF-8" />
+	<title>Safety Tips - Responsive</title>
+   <title>Ride for Life</title>
+   <link href="esp.css" rel="stylesheet" type="text/css" />
+    </head>
    <body>
     <div id="wrapper">
   	<h1>Got BMX bikes? <br />Need Parts?! </h1>
@@ -53,8 +48,7 @@
     <p align="center">Come to our shop and check us out!</p>  
     
   
-    </div>
-<div class="footer">Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. <br /></div>
+<footer>Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. </footer>
     </div>
     </body>
     </html>  
