--- a/safety.html
+++ b/safety.html
@@ -38,8 +38,8 @@
 		<li> Handlebars no wider than allowable width of 735mm</li>
 	      </ul>
      
-       </div>
-<footer>Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. <br /></div>
+       
+<footer>Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. </footer>
     </div>
     </body>
     </html>  
