cleanup to team page

--- a/team.html
+++ b/team.html
@@ -1,42 +1,43 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-   <html xmlns="http://www.w3.org/1999/xhtml">
-   <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!DOCTYPE html>
+   <html>
+    <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Home - BMJ Racers</title>
-	<meta name="description" content="The finest BMX Racers available in Albuquerque and New Mexico."/><meta name="keywords" content="BMX, bikes, safe riding" />
-   <title>Welcome to BMJ Racers, home of Albuquerque's finest selection of BMX Bikes</title>
+	<title>Welcome to BMJ Racers, home of Albuquerque's finest selection of BMX Bikes</title>
    <link  href="esp.css" rel="stylesheet" type="text/css" />
 
-   <link href="print.css" rel="stylesheet" type="text/css" media="print" />
-   </head>
+    </head>
+   
    <body>
     <div id="wrapper">
-  	<h1>BMJ Racing</h1>
+  	
+	<h1>BMJ Racing</h1>
 	
 	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
-	<a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
-	<a href="service.html">Service & Repairs</a>&nbsp;|&nbsp;
-	<a href="products.html">Products</a>&nbsp;|&nbsp;
-	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
-	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
-    	<a href="contact.html">Contact Us</a>&nbsp;
+	  <a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
+	  <a href="service.html">Service & Repairs</a>&nbsp;|&nbsp;
+	  <a href="products.html">Products</a>&nbsp;|&nbsp;
+	  <a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
+	  <a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
+	  <a href="contact.html">Contact Us</a>&nbsp;
+	</h2>   
  
-</h2>   
-    <div>
- <h3 align="center">BMJ Amateur Racing Team</h3>
-    <p align="center">Amazing locally grown racers, taking over the southwest.</p>
+ 
+   <div>
+	<h3 align="center">BMJ Amateur Racing Team</h3>
+	    <p align="center">Amazing locally grown racers, taking over the southwest.</p>
 
-<h4 style="color: white">BMJ Sponsors are the best and brightest companies in the Southwest!</h4>
-    <a href="http://www.lotaburger.com"</a><p align="center">Blake's Lotaburger</p>
-    <a href="http://www.deepdivecoders.com"</a><p align="center">Deep Dive Coders</p>
-    <a href="http://www.cnm.edu"</a><p align="center">CNM STEMulus</p>
-    <p align="center" style="color: white">Thanks for supporting our team!</p>  
+	<h4 style="color: white">BMJ Sponsors are the best and brightest companies in the Southwest!</h4>
+	    <a href="http://www.lotaburger.com"</a><p align="center">Blake's Lotaburger</p>
+	    <a href="http://www.deepdivecoders.com"</a><p align="center">Deep Dive Coders</p>
+	    <a href="http://www.cnm.edu"</a><p align="center">CNM STEMulus</p>
+	    <p align="center" style="color: white">Thanks for supporting our team!</p>  
+   </div>
+
+<footer>Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. <br /></div>
     
+    </div>
   
-    </div>
-<div class="footer">Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. <br /></div>
-    </div>
-    </body>
-    </html>  
+   </body>
+  
+  </html>  
