modified css and added missing curley brace

--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
 	 </nav>
  
 
-    <div>
-  <h3 align="center">Welcome! </h3>
-    <p align="center"> 
+    <section>
+  <h3>Welcome!</h3>
+   
       
 BMJ RACERS is the modern place <br /> to achieve all your BMX dreams. <br /><br /></p>
 <h3>Our BMX bikes are crafted with exceptional care.</h3>
-    </div>
+    </section>
+    <article>
+      <h3>Thanks for stopping by!</h3>
+    </article>
     
     <footer>
      <p>Thanks for stopping by!</p>
