additions to products.html

--- a/products.html
+++ b/products.html
@@ -7,17 +7,17 @@
    <link href="esp.css" rel="stylesheet" type="text/css" />
     </head>
    <body>
-    <div id="wrapper">
-  	<h1>Got BMX bikes? <br />Need Parts?! </h1>
-	
+    <header>
+  	<h1>Got BMX bikes? <br>Need Parts?! </h1></header>
+     <nav>
 	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
 	<a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
 	<a href="service.html">Service & Repairs</a>&nbsp;|&nbsp;
 	<a href="products.html">Products</a>&nbsp;|&nbsp;
 	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
 	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
-    	<a href="contact.html">Contact Us</a>&nbsp; </h2>   
-    <div>
+    	<a href="contact.html">Contact Us</a>&nbsp; </h2>  </nav> 
+    <section>
   <h3 align="center">Achieve your BMX potential! </h3>
     <p align="center">
      <h3> We have new bikes!</h3>
@@ -47,7 +47,7 @@
 
     <p align="center">Come to our shop and check us out!</p>  
     
-  
+    </section>
 <footer>Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. </footer>
     </div>
     </body>
