--- a/locations.html
+++ b/locations.html
@@ -8,20 +8,21 @@
    </head>
    
    <body>
-    <div id="wrapper">
+    <header>
   	<h1>Where to ride?</h1>
+    </header>
 	
-	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
-	<a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
-	<a href="service.html">Service & Repairs</a>&nbsp;|&nbsp;
-	<a href="products.html">Products</a>&nbsp;|&nbsp;
-	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
-	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
-    	<a href="contact.html">Contact Us</a>&nbsp;
+      <h2><a href="index.html">BMX Bikes</a>
+	<a href="team.html">BMJ Team</a>
+	<a href="service.html">Service & Repairs</a>
+	<a href="products.html">Products</a>
+	<a href="locations.html">Where to Ride</a>
+	<a href="safety.html">Safety Tips</a>
+    	<a href="contact.html">Contact Us</a>
  
-</h2>   
-    <div>
-  <h3 align="center">Locations</h3>
+      </h2>   
+     <div>
+      <h3 align="center">Locations</h3>
     <a href="https://www.usabmx.com/tracks/1046"><p align="center">Duke City Bike Park (behind Isotopes Park)</p></a>
     <a href="https://www.facebook.com/pages/North-Valley-Bike-Park-Bernalillo-County/132435156863826"><p align="center">North Valley Bike Park (behind Raymond G.Sanchez Community Center)</p></a>
     <a href="http://www.visitalbuquerque.org/listings/Skate-Parks---City-of-Albuquerque/4003/"><p align="center">ABQ Skate Parks (Los Altos, Coronado, Tower, Alamosa, North Domingo Baca, NW Modular)</p></a>
