update products, safety pages to R Version

--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
    <html>
     <head>
 	<meta charset=UTF-8" />
-	<title>Safety Tips - Responsive</title>
+	<title>Products - R Version</title>
    <title>Ride for Life</title>
    <link href="esp.css" rel="stylesheet" type="text/css" />
     </head>
@@ -26,7 +26,7 @@
        <li>BMX SUPERIOR</li>
        <li>BMX AMAZING THREE</li>
       </ul>
-<br /></p>
+<br></p>
      <p align="center">
      <h3> We have new stickers!</h3>
       <ul>
@@ -34,7 +34,7 @@
        <li>BMX SUPERIOR (three inch size, scaleable)</li>
        <li>BMX AMAZING 3 (in six inch size)</li>
       </ul>
-<br /></p>
+<br></p>
           <p align="center">
      <h3> PARTS TOO!!</h3>
       <ul >
@@ -42,12 +42,9 @@
        <li>BMX SUPERIOR WHEELS (24", with scaleable)</li>
        <li>BMX AMAZING 3 (in six inch size)</li>
       </ul>
-<br /><br /></p>
-
-
+<br></p>
     <p align="center">Come to our shop and check us out!</p>  
-    
-    </section>
+        </section>
 <footer>Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. </footer>
     </div>
     </body>
