--- a/safety.html
+++ b/safety.html
@@ -2,23 +2,25 @@
    <html>
     <head>
 	<meta charset=UTF-8" />
-	<title>Safety Tips - Responsive</title>
+	<title>Safety Tips - RVersion</title>
    <title>Ride for Life</title>
    <link href="esp.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-     <div id="wrapper">
+     <header>
   	<h1>Safe Riding! <br />with Maximum Speed...</h1>
-	
+     </header>	
+	<nav>
 	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
 	<a href="team.html">BMJ Team</a>&nbsp;|&nbsp;
 	<a href="service.html">Service & Repairs</a>&nbsp;|&nbsp;
 	<a href="products.html">Products</a>&nbsp;|&nbsp;
 	<a href="locations.html">Where to Ride</a>&nbsp;|&nbsp;
 	<a href="safety.html">Safety Tips</a>&nbsp;|&nbsp;
-    	<a href="contact.html">Contact Us</a>&nbsp; </h2>   
-       <div> 
-	   <p><strong>Spills are always possible</strong> and can happen during a race or even during practices. Although injuries can happen to any rider, observing safe riding habits can ensure that injuries are kept to a minimum; rides are kept to a maximum. <br />
+    	<a href="contact.html">Contact Us</a>&nbsp; </h2>
+	</nav>
+       <section> 
+	   <p><strong>Spills are always possible</strong> and can happen during a race or even during practices. Although injuries can happen to any rider, observing safe riding habits can ensure that injuries are kept to a minimum; rides are kept to a maximum. <br>
 	  <br />Recommended Safety Gear:</p>
 	      <ul>
 		<li>Racing Pants</li>
@@ -29,7 +31,7 @@
 	      </ul>
 	   <p>Race Worthy Bikes</p>
 	      <ul>
-		<li> Frame and forks must not be cracked, broken or distorted. <br /> Check to be sure they are the correct size and in good condition.</li>
+		<li> Frame and forks must not be cracked, broken or distorted. <br> Check to be sure they are the correct size and in good condition.</li>
 		<li>Wheels must be no larger than 53.3mm</li>
 		<li>Tires should be properly inflated, with no splits or separations.</li>
 		<li>Chains and bearing must be properly greased and tensioned.</li>
@@ -37,9 +39,7 @@
 		<li>Pedals have effective grip</li>
 		<li> Handlebars no wider than allowable width of 735mm</li>
 	      </ul>
-     
-       
+            </section>
 <footer>Copyright &copy; MMXIV by Bob, Max, and jLeo. All rights reserved. </footer>
-    </div>
-    </body>
+        </body>
     </html>  
