--- a/safety.html
+++ b/safety.html
@@ -20,8 +20,11 @@
     	<a href="contact.html">Contact Us</a>&nbsp; </h2>
 	</nav>
        <section> 
-	   <p><strong>Spills are always possible</strong> and can happen during a race or even during practices. Although injuries can happen to any rider, observing safe riding habits can ensure that injuries are kept to a minimum; rides are kept to a maximum. <br>
-	  <br />Recommended Safety Gear:</p>
+	   <p><strong>Spills are always possible.</strong><br> <br>They can happen during <br>
+	   a race or even during practices. <br>Although injuries can happen to any 
+	   rider, <br>riding safely can ensure injuries are minimized <br>
+	   rides are maximimized. <br>
+	  <br><strong>Recommended Safety Gear:</strong></p>
 	      <ul>
 		<li>Racing Pants</li>
 		<li>Gloves</li>
@@ -29,7 +32,7 @@
 		<li>Shoes</li>
 		<li>Racing Jersey</li>
 	      </ul>
-	   <p>Race Worthy Bikes</p>
+	   <p><strong>Race Worthy Bikes</strong></p>
 	      <ul>
 		<li>Frame and forks must not be cracked, broken or distorted. <br> Check to be sure they are the correct size and in good condition.</li>
 		<li>Wheels must be no larger than 53.3mm</li>
