--- a/safety.html
+++ b/safety.html
@@ -8,7 +8,7 @@
     </head>
     <body>
      <header>
-  	<h1>Safe Riding! <br />with Maximum Speed...</h1>
+  	<h1>Safe Riding! <br><br>with Maximum Speed...</h1>
      </header>	
 	<nav>
 	<h2><a href="index.html">BMX Bikes</a>&nbsp;|&nbsp;
