fix nav bar & add fancy woff type to header

--- a/locations.html
+++ b/locations.html
@@ -12,12 +12,12 @@
   	<h1>Where to ride?</h1>
     </header>
 	
-      <h2><a href="index.html">BMX Bikes</a>
-	<a href="team.html">BMJ Team</a>
-	<a href="service.html">Service & Repairs</a>
-	<a href="products.html">Products</a>
-	<a href="locations.html">Where to Ride</a>
-	<a href="safety.html">Safety Tips</a>
+      <h2><a href="index.html">BMX Bikes</a>&nbsp|&nbsp
+	<a href="team.html">BMJ Team</a>&nbsp|&nbsp
+	<a href="service.html">Service & Repairs</a>&nbsp|&nbsp
+	<a href="products.html">Products</a>&nbsp|&nbsp
+	<a href="locations.html">Where to Ride</a>&nbsp|&nbsp
+	<a href="safety.html">Safety Tips</a>&nbsp|&nbsp
     	<a href="contact.html">Contact Us</a>
  
       </h2>   
